gitops/apps/taskflow/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: taskflow-gateway
  namespace: taskflow
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: "192.168.50.201"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - taskflow
                  - monitoring
                  - policy-reporter
                  - hubble-ui
    - name: https
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - name: taskflow-tls-secret
            group: ""
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - taskflow
                  - monitoring
                  - policy-reporter
                  - hubble-ui
